<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_profile"
    tools:context=".ProfilePage">


    <androidx.cardview.widget.CardView
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        app:cardBackgroundColor="@color/LightGrey"
        app:cardCornerRadius="250dp">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/Dark_Slate_Grey"
            app:cardCornerRadius="250dp">

            <androidx.cardview.widget.CardView
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_picture_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />

            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/profile_nama"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/profile_nim"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_kelas"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/profile_referensi"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/referensi1"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/referensi2"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/referensi3"
        android:textAlignment="center"
        android:textSize="18sp" />


</LinearLayout>