<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".SfxViewerActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/sound"
        app:tint="@color/LightGrey"
        android:contentDescription="@string/sound_icon" />

    <TextView
        android:id="@+id/sfxTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/sfx_library_and_previewer"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/sfxSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/category"
        android:textSize="15sp" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/sfx_viwer_play_button" />

</LinearLayout>