<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recycleViewRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:src="@drawable/sound"
        app:tint="@color/LightGrey"
        android:contentDescription="@string/sound_icon" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/sfx_title"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/itemSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sfx_category"
            android:lines="1" />
    </LinearLayout>

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="#ff0f0f"
        android:text="@string/adapter_button" />
</LinearLayout>